# prad2evviewer

./: .gitignore  CMakeLists.txt  README.md  project_track_matcher.md
analysis/: CMakeLists.txt  README.md
analysis/cuts/: prad2_default.json
analysis/include/: ConfigSetup.h  MatchingTools.h  PhysicsTools.h  Replay.h  gain_factor.h
analysis/pyscripts/: _common.py  _pulse_template_db.py  apply_pulse_template.py  deconv_pileup_demo.py  fit_pulse_template.py  gem_hycal_matching.py  plot_hits_at_hycal.py
analysis/scripts/: gem_clusters_to_root.C  gem_hycal_matching.C  gem_raw_dump.C  lms_alpha_normalize.C  plot_hits_at_hycal.C  rootlogon.C  script_helpers.h  tagger_hycal_correlation.C
analysis/src/: MatchingTools.cpp  PhysicsTools.cpp  Replay.cpp
analysis/tools/: analysis_example.cpp  cosmic_test.cpp  det_calib.cpp  epCalib.cpp  gain_monitor.cpp  gain_replay.cpp  live_charge.cpp  matching.cpp  quick_check.cpp  replay_filter.cpp  replay_rawdata.cpp  replay_rawdata_m.cpp  replay_recon.cpp  replay_recon_m.cpp  replay_report_viewer.py  sim2replay.cpp
calibration/: README.md  SNAKE_SCAN_MANUAL.md  gain_scanner.py  hycal_gain_equalizer.py  hycal_snake_scan.py  paths.json  pmt_response.py  scan_engine.py  scan_epics.py  scan_geoview.py
cmake/: prad2_py_wrapper.sh.in
database/: config.json  daq_config.json  daq_map.json  det_calib_config.json  gain_equalization_results.json  gain_response_curve.json  gem_map.json  hist_config.json  hycal_map.json  hycal_modules.json  monitor_config.json  online_config.json  reconstruction.json  reconstruction_config.json  trigger_bits.json
database/calibration/: calibration_factor_1.json  rough_calib.json
database/gem_peds/: cm_24111.txt  peds_24111.txt
database/gem_test/: gem_event_113.json  gem_event_1154.json  gem_event_117.json  gem_event_1215.json  gem_event_1325.json  gem_event_1350.json  gem_event_142.json  gem_event_15.json  gem_event_151.json  gem_event_2124.json  gem_event_213.json  gem_event_225.json  gem_event_2559.json  gem_event_2770.json  gem_event_3070.json  gem_event_378.json  gem_event_415.json  gem_event_425.json  gem_event_429.json  gem_event_473.json  gem_event_490.json  gem_event_524.json  gem_event_584.json  gem_event_599.json  gem_event_6.json  gem_event_641.json  gem_event_677.json  gem_event_6978.json  gem_event_7010.json  gem_event_720.json  gem_event_738.json  gem_event_746.json  gem_event_7919.json  gem_event_821.json  gem_event_8258.json  gem_event_845.json  gem_event_85.json  gem_event_8928.json  gem_event_911.json  gem_event_912.json  (+1 more)
database/prad1/: prad_config.json  (+3 more)
docs/: REPLAYED_DATA.md
gem/: CMakeLists.txt  README.md  gem_cluster_view.py  gem_dump.cpp  gem_event_viewer.py  gem_layout.py  gem_view.py
include/: EvChannel.h  EvStruct.h  Fadc250Decoder.h
prad2_monitor/: CMakeLists.txt  main.cpp
prad2dec/: CMakeLists.txt  README.md
prad2det/: CMakeLists.txt  README.md
python/: CMakeLists.txt  bind_dec.cpp  bind_det.cpp  prad2py.cpp
resources/: cluster.js  config.js  cut_dialog.js  epics.js  gem.js  gem_apv.js  geo.js  lms.js  online.js  physics.js  report.js  theme.js  viewer.css  viewer.html  viewer.js  waveform.js
scripts/: README.md  SNAKE_SCAN_MANUAL.md  ep_calib_viewer.py  gem_cluster_view.py  gem_strip_map.py  hycal_event_viewer.py  hycal_geoview.py  hycal_map_builder.py  hycal_pedestal_monitor.py  hycal_scaler_map.py  hycal_snake_scan.py  json_flattener.py  run_gain_monitor.sh  setup.csh  setup.sh  tagger_hycal_correlation.py  tagger_viewer.py  tdc_viewer.py  waveform_histograms.py  waveform_viewer.py
src/: EvChannel.cpp  Fadc250Decoder.cpp  app_state.cpp  app_state.h  app_state_api.cpp  app_state_init.cpp  data_source.cpp  data_source.h  evc_monitor.cpp  evc_viewer.cpp  evio_data_source.cpp  evio_data_source.h  load_daq_config.h  prad2_client.cpp  prad2_monitor.cpp  prad2_qtgui.cpp  prad2_server.cpp  prad2_viewer.cpp  prad2evviewer.cpp  root_data_source.cpp  root_data_source.h  viewer_server.cpp  viewer_server.h  viewer_server_et.cpp  viewer_server_http.cpp  viewer_utils.h
test/: CMakeLists.txt  README.md  et_feeder.cpp  evchan_test.cpp  evio_dump.cpp  gem_dump.cpp  ped_calc.cpp  tdc_dump.cpp  test_main.cpp
(+51 files in other folders)
